--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ a:hover {
   opacity: 1;
   max-height: 200px;
   padding: 10px 8px;
+  transition: opacity 0.7s, max-height 0.3s; ease-in-out; font-size: smaller;
 }
 
 /* --- RESPONSIVE DESIGN --- */
